# ursus-flow-firmware

./: .gitignore  README.md
program/: FreeRTOSConfig.h  Makefile  main.c  mxconstants.h  startup_stm32f767xx.s  stm32f767vi_flash.ld  stm32f7xx_hal_conf.h  system_stm32f7xx.c
program/common/: delay.c  delay.h
program/debug/: openocd.cfg
program/driver/device/: lidar.c  lidar.h  mpu9250.c  mpu9250.h  mt9v034.c  mt9v034.h
program/driver/peripherial/: core.c  core.h  dcmi.c  dcmi.h  gpio.c  gpio.h  i2c.c  i2c.h  interrupt.c  interrupt.h  pwm.c  pwm.h  spi.c  spi.h  timer.c  uart.c  uart.h
program/driver/peripherial/usb/: usb_device.c  usb_device.h  usbd_cdc_if.c  usbd_cdc_if.h  usbd_conf.c  usbd_conf.h  usbd_desc.c  usbd_desc.h
program/system/: distance_weighting.h  fcb_link.c  fcb_link.h  flow.c  flow.h  imu.h  kalman_filter.c  kalman_filter.h  low_pass_filter.c  low_pass_filter.h  main.c  ssd16.h  system_time.c  system_time.h  usb_link.c  usb_link.h
tools/camera/: Makefile  main.cpp
tools/csv_plot/: accel_log.csv  csv_plot.py  flow.csv
tools/distance_weighting/: distance_weighting_generator.py  gaussian_generator.py
tools/kalman_filter/: Makefile  input_data.csv  kf.py
tools/monitor/: Makefile  camera  distance_weighting.hpp  flow_simulate.cpp  flow_simulate.hpp  main.cpp
tools/ros_ws/: Makefile  rqt.perspective
tools/ros_ws/src/monitor/: CMakeLists.txt  Makefile  distance_weighting.hpp  flow_simulate.cpp  flow_simulate.hpp  main.cpp  package.xml
tools/ros_ws/src/monitor/config/: rviz_config.rviz
tools/ros_ws/src/serial_monitor/: CMakeLists.txt  link.hpp  main.cpp  package.xml
tools/ros_ws/src/usb_flow_simulator/: CMakeLists.txt  distance_weighting.hpp  flow_simulate.hpp  main.cpp  (+1 more)
tools/ros_ws/src/usb_monitor/: CMakeLists.txt  Makefile  camera  distance_weighting.hpp  flow_simulate.cpp  flow_simulate.hpp  main.cpp  package.xml
tools/ros_ws/src/usb_monitor/launch/: monitor.launch
(+26 files in other folders)
